# Nebul0us.rs

./: .notes  Cargo.toml  README.md  build.rs
src/: main.rs
src/constants/: bot_names.rs  mod.rs
src/game/: funx.rs  mod.rs  netrng.rs  packets.rs  rng_crypt.rs
src/game/enums/: base_event.rs  clan_rank.rs  click_type.rs  color_cycle.rs  connect_result.rs  connection_state.rs  difficulty.rs  game_mode.rs  name_font.rs  packet.rs  packet_id.rs  player_visibility.rs  server.rs  skin.rs  split_multiplier.rs  world_size.rs
src/game/packets/: clan_chat_message.rs  client_preferences.rs  connect_request.rs  connect_request_3.rs  connect_result_2.rs  control.rs  disconnect.rs  emote_request.rs  enter_game_request.rs  enter_game_result.rs  game_chat_message.rs  game_data.rs  game_update.rs  join_request.rs  join_result.rs  keep_alive.rs  packet.rs  session_stats.rs  spectate_game_request.rs  top_scores.rs
src/interfaces/: mod.rs  world_props.rs
src/models/: bot.rs  byte_array.rs  ejection.rs  mod.rs  pretty_print.rs  world.rs
src/models/client/: bot.rs  instruction.rs
src/net/: byte_array.rs  mod.rs  packet_redirect.rs  sock.rs  thread_communicator.rs
src/utils/: pretty_print.rs
