[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obfstr = "0.4.1"
java-rand = "0.2.0"
rand = "0.8.5"
chrono = "0.4.22"
udpflow = "0.1.0"
tokio = {version="1.21.2", features = ["full"]}
async-trait = "0.1.57"
inquire = "0.4.0"
